    * Tested against Chromium HeadlessChrome/71.0.3578.98
    * Tested against Chrome   HeadlessChrome/72.0.3623.0
    * Tested against Chromium HeadlessChrome/73.0.3683.103
    * Tested against Chromium HeadlessChrome/74.0.3729.131
    * Tested against Chromium HeadlessChrome/75.0.3768.3
    * Tested against Chromium HeadlessChrome/76.0.3798.0

0.31 2019-05-25
    * Silence HTTP::Cookies::Chrome debug output left over
    * ->eval() now takes options on whether object references or JSON-serialized
      data should be returned. This allows you to reference the "window"
      object, for example.
      Currently, these object references are kept as hashrefs instead of
      objects, and the handling needs to become more transparent with respect to
      the Chrome API, but that is planned for later versions.

0.30 2019-05-17
    * Disable the Host: header test for Chromer 76+, as this raises an error
      in those versions instead of just not working.
      I guess this is progress.

0.29 2019-04-23
    * Add ->cookie_jar support, this adresses GH #40
    * Document "autoclose" option

0.28 2019-01-07
    * More test resiliency against fake domains / links injected by bad ISPs
      (like frontier.com )
    * Link to WWW::Mechanize::Chrome::Troubleshooting from main documentation
    * Documentation improvements by SDONLEY
    * Up Future prerequisite to 0.35, earlier versions lack the features
      the module uses

0.27 2018-12-23
    * Properly handle Page.navigatedWithinDocument instead of raising an error.
      The synthetic response object doesn't help much, but on the other side,
      it's much better than raising an error and stopping the script.
      Reported by Steve Dondley, Github issue GH #34

0.26 2018-12-09
    * Actually do something if we timeout when connecting to Chrome.
      The main cause of the connetcion to Chrome failing is that there already
      is a non-devtools instance of Chrome running and is brought to the